# Doc/swagger.yaml
@@ -248,19 +248,76 @@ paths:
       description: Fetch all available waste collection routes.
       tags:
         - Routes
+       
       responses:
         '200':
           description: List of all waste collection routes
           content:
             application/json:
               schema:
-                type: array
+                type: String
                 items:
-                  $ref: '#/components/schemas/RouteResponse'
+                  $ref: '#/components/schemas/Route'
         '401':
           description: Unauthorized (Token is missing or invalid)
         '500':
           description: Server error (Unable to fetch routes)
+
+  /smartWaste/route/getRouteById/{id}:
+    get:
+      summary: Get  waste collection routes
+      description: Fetch  waste collection routes by id.
+      tags:
+        - Routes
+      parameters:
+        - name: id
+          in: path
+          required: true
+          description: ID of Route  
+      responses:
+        '200':
+          description: waste collection routes
+          content:
+            application/json:
+              schema:
+                type: String
+                items:
+                  $ref: '#/components/schemas/Route'
+        '401':
+          description: Unauthorized (Token is missing or invalid)
+        '500':
+          description: Server error (Unable to fetch routes) 
+        '404':
+          description: Not Found (Unable to fetch routes) 
+
+  /smartWaste/route/getRouteByName/{route_name}:
+    get:
+      summary: Get  waste collection routes
+      description: Fetch  waste collection routes by route name.
+      tags:
+        - Routes
+      parameters:
+        - name: id
+          in: path
+          required: true
+          description: Name of the rout to be fetched  
+      responses:
+        '200':
+          description: waste collection routes
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Route'
+        '401':
+          description: Unauthorized (Token is missing or invalid)
+        '500':
+          description: Server error (Unable to fetch routes) 
+        '404':
+          description: Not Found (Unable to fetch routes)        
+
+
 
 components:
   schemas:
